kubernetes/mongodb-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: sai-app
spec:
  selector:
    app: mongodb
  ports:
    - name: mongo
      port: 27017
      targetPort: 27017
